# Keygram

./: LICENSE  README.md  db.db  main.py  pyproject.toml
src/: alembic.ini  config.py
src/alembic/versions/: 6b906e5dea42_add_keybind_field_to_keybinds_table.py  6da0cbd99857_remove_column_amount_use_from_keymaps_.py  754494f5f540_change_keymap_model_and_add_multibinds_.py  d12e039dd409_change_title_type_in_keymaps_on_integer.py  e54893de5b11_change_title_and_about_to_title_id_and_.py
src/database/: keymaps.py  models.py
src/locale/en/LC_MESSAGES/: Keygram.po  My_Custom_Telegram_Client.mo  My_Custom_Telegram_Client.po
src/locale/ru/LC_MESSAGES/: Keygram.po  My_Custom_Telegram_Client.mo  My_Custom_Telegram_Client.po
src/services/: load_env_vars.py  load_internalization.py  terminal_scripts.py
src/services/database/models/: global_data.py  keymaps.py
src/services/frontend/: load_all_styles.py
src/services/frontend/gui/widgets/chat/messanger/: video_widget.py
src/services/frontend/gui/widgets/dialogs/: dialog_cut.py
src/services/logging/: __init__.py  api_logging_config.json  config.py  setup_logger.py
src/static/styles/: chat.css  dialog.css
src/telegram_client/backend/: client_init.py  config.py
src/telegram_client/backend/chat/: messages.py  video_widget.py
src/telegram_client/backend/dialogs/: dialogs.py  download_avatars.py
src/telegram_client/frontend/gui/: __init__.py  _core_widget.py  _keyboard_shortcuts.py  main_window.py  modes.py
src/telegram_client/frontend/gui/widgets/chat/: chat.py
src/telegram_client/frontend/gui/widgets/chat/messanger/: dialog_scroller.py  info_menu.py  input_field.py  message.py  messanger.py  scrolled_messanger.py  video_message_widget.py  video_widget.py
src/telegram_client/frontend/gui/widgets/chat/messanger/input_field/: input_field.py  keyboard.py  (+1 more)
src/telegram_client/frontend/gui/widgets/dialogs/: dialog.py  dialog_text.py  dialog_title.py  list.py
src/telegram_client/frontend/gui/widgets/dialogs/dialog_list/: dialog_list.py  keyboard.py  scrollable_dialog_list.py
src/telegram_client/frontend/gui/widgets/viewer/: media_player.py  position_slider.py  speed_spinbox.py  viewer.py  volume_slider.py
(+16 files in other folders)
