[tool.poetry]
name = "desktop-telegram"
version = "0.0.1"
description = "My desktop telegram client, which have compability with vim commands and work in terminal, for ⚡️⚡️⚡️BLA$$ING F@ST ⚡️⚡️⚡️ experience :)"
authors = ["moonvent <terraboneystone@proton.me>"]
license = "The MIT License (MIT)"
readme = "README.md"
packages = [{include = "../desktop_telegram"}]
repository = "https://github.com/moonvent/Keygram"
keywords = ["telegram", "vim", "poetry", "python", "telethon", "pyside6"]

[tool.poetry.dependencies]
python = "3.10"
debugpy = "^1.6.4"
telethon = "^1.26.0"
python-dotenv = "^0.21.0"
pyside6 = "^6.4.1"
loguru = "^0.6.0"
sqlalchemy = "^1.4.45"
alembic = "^1.9.0"
sqlalchemy-json = "^0.5.0"
cryptg = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
update_langs = "src.services.terminal_scripts:update_langs"

